[package]
name = "quicky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = { version = "1.6", features = ["json"]}
url = "2.2.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
futures = "0.3.19"
ring = "0.16.20"
regex = "1.5.4"
clap = { version = "3.0.12", features = ["derive"] }
